images and starting layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,34 @@
   </head>
   <body>
 
-    <h1>Web App</h1>
+    <header>
+      <h1>WebApp<sup>TM</sup></h1>
+    </header>
+
+    <nav>
+
+    </nav>
+
+    <main id="dashboard">
+      <section id="traffic">
+
+      </section>
+      <section id="social-stats">
+
+      </section>
+      <section id="new-members">
+
+      </section>
+      <section id="recent-activity">
+
+      </section>
+      <section id="message">
+
+      </section>
+      <section id="settings">
+
+      </section>
+    </main>
 
   </body>
 </html>
