--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <header>
       <h1>WebApp<sup>TM</sup></h1>
+  
+      <img src="imgs/members/member-0.jpg" alt="Profile Picture">
+      <h2>Thomas Cardwell</h2>
     </header>
 
     <nav>
