nav and header styling initial

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 
     <header>
       <h1>WebApp<sup>TM</sup></h1>
-  
-      <img src="imgs/members/member-0.jpg" alt="Profile Picture">
+
+      <img class="avatar" src="imgs/members/member-0.jpg" alt="Profile Picture">
       <h2>Thomas Cardwell</h2>
     </header>
 
     <nav>
-
+      <ul>
+        <li>w</li>
+        <li>x</li>
+        <li>y</li>
+        <li>z</li>
+      </ul>
     </nav>
 
     <main id="dashboard">
