more messing w header and nav

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <header>
       <h1>WebApp<sup>TM</sup></h1>
 
-      <img class="avatar" src="imgs/members/member-0.jpg" alt="Profile Picture">
-      <h2>Thomas Cardwell</h2>
+      <div class="id-badge">
+        <img class="avatar" src="imgs/members/member-0.jpg" alt="Profile Picture">
+        <h2>Thomas Cardwell</h2>
+      </div>
     </header>
 
     <nav>
@@ -26,22 +28,22 @@
 
     <main id="dashboard">
       <section id="traffic">
-
+        Traffic
       </section>
       <section id="social-stats">
-
+        Social
       </section>
       <section id="new-members">
-
+        New Members
       </section>
       <section id="recent-activity">
-
+        recent
       </section>
       <section id="message">
-
+        message
       </section>
       <section id="settings">
-
+        settings
       </section>
     </main>
 
