--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
     </nav>
 
     <main id="dashboard">
-      <h2>Dashboard</h2>
+      <div class="dash-label">
+        <h2>Dashboard</h2>
+        <div class="spacer">
+          
+        </div>
+      </div>
+
 
       <!-- Alert will get added here -->
       <section id="traffic">
