--- a/index.html
+++ b/index.html
@@ -64,17 +64,29 @@
       <div class="dash-label">
         <h2>Dashboard</h2>
         <div class="spacer">
-          
+
         </div>
       </div>
 
+      <div class="alert-space">
+        <!-- Alert will get added here -->
+      </div>
 
-      <!-- Alert will get added here -->
       <section id="traffic">
-        Traffic
+        <h3>traffic</h3>
       </section>
+
+      <section id="daily-traffic">
+        <h3>daily traffic</h3>
+      </section>
+
+      <section id="mobile-users">
+        <h3>mobile users</h3>
+      </section>
+
       <section id="social-stats">
         <h3>Social Stats</h3>
+
         <div class="social-badge">
 
         </div>
@@ -85,9 +97,28 @@
 
         </div>
       </section>
+
       <section id="new-members">
-        New Members
+        <h3>New Members</h3>
+
+        <div class="new-member">
+          1
+        </div>
+
+        <div class="new-member">
+          2
+        </div>
+
+        <div class="new-member">
+          3
+        </div>
+
+        <div class="new-member">
+          4
+        </div>
+
       </section>
+
       <section id="recent-activity">
         recent
       </section>
