--- a/index.html
+++ b/index.html
@@ -158,15 +158,18 @@
         <form class="settings" action="index.html" method="post">
 
           <label for="email-notifications">Send Email Notifications</label>
-          <input type="checkbox" id="email-notifications" name="email-notifications" value="Send Email Notifications" checked><br>
 
           <label class="switch">
-            <input type="checkbox">
+            <input type="checkbox" id="email-notifications" name="email-notifications" value="Send Email Notifications" checked>
             <span class="slider round"></span>
-          </label>
+          </label><br>
 
           <label for="set-profile-to-public">Set Profile to Public</label>
-          <input type="checkbox" id="set-profile-to-public" name="set-profile-to-public" value="set-profile-to-public" checked>
+
+          <label class="switch">
+            <input type="checkbox" id="set-profile-to-public" name="set-profile-to-public" value="Set Profile to Public" checked>
+            <span class="slider round"></span>
+          </label><br>
 
 
         </form>
