Added images for recent

--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
         <!-- dynamically add this content w/ JS -->
 
         <div class="activity">
-          1
+          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers">
         </div>
 
         <div class="activity">
-          2
+          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers">
         </div>
 
         <div class="activity">
-          3
+          <img class="avatar" src="imgs/members/member-4.jpg" alt="Victoria Chambers">
         </div>
 
         <div class="activity">
-          4
+          <img class="avatar" src="imgs/members/member-4.jpg" alt="Victoria Chambers">
         </div>
       </section>
 
