updated Alt tags

--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
         </div>
 
         <div class="new-member">
-          <img class="avatar" src="imgs/members/member-2.jpg" alt="Victoria Chambers">
+          <img class="avatar" src="imgs/members/member-2.jpg" alt="Algernon Fudginton">
           <h4>Algernon Fudginton</h4>
           <span class="email">yourbrotherken@example.com</span>
           <span class="date">11/15/21</span>
         </div>
 
         <div class="new-member">
-          <img class="avatar" src="imgs/members/member-3.jpg" alt="Victoria Chambers">
+          <img class="avatar" src="imgs/members/member-3.jpg" alt="Juliet Montague">
           <h4>Juliet Montague</h4>
           <span class="email">jules.capulet92@example.com</span>
           <span class="date">10/15/21</span>
         </div>
 
         <div class="new-member">
-          <img class="avatar" src="imgs/members/member-4.jpg" alt="Victoria Chambers">
+          <img class="avatar" src="imgs/members/member-4.jpg" alt="Sven Hasselbläd">
           <h4>Sven Hasselbläd</h4>
           <span class="email">77hesitancy@example.com</span>
           <span class="date">09/15/21</span>
