--- a/index.html
+++ b/index.html
@@ -139,20 +139,30 @@
         <!-- dynamically add this content w/ JS -->
 
         <div class="activity">
-          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers">
+          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
+          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
+          <span class="activity-message">2 hours ago</span>
         </div>
 
         <div class="activity">
-          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers">
+          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
+          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
+          <span class="activity-message">2 hours ago</span>
         </div>
 
         <div class="activity">
-          <img class="avatar" src="imgs/members/member-4.jpg" alt="Victoria Chambers">
+          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
+          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
+          <span class="activity-message">2 hours ago</span>
         </div>
 
         <div class="activity">
-          <img class="avatar" src="imgs/members/member-4.jpg" alt="Victoria Chambers">
+          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
+          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
+          <span class="activity-message">2 hours ago</span>
         </div>
+
+
       </section>
 
       <section id="message">
