--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
     <header>
       <h1>WebApp<sup>TM</sup></h1>
-
+      <div class="bell">
       <svg class="navicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 117 122.9">
         <g>
           <path d="M76 109a17 17 0 0 1-24 13l-5-3a18 18 0 0 1-6-11 2 2 0 0 1 2-2h31a2 2 0 0 1 2 3zM68 7l5 1a41 41 0 0 1 6 3 41 41 0 0 1 5 4 40 40 0 0 1 5 5 40 40 0 0 1 4 5 41 41 0 0 1 3 7 37 37 0 0 1 1 6 40 40 0 0 1 1 7 4880 4880 0 0 0 0 15 53 53 0 0 0 1 6 50 50 0 0 0 1 6 31 31 0 0 0 2 6 35 35 0 0 0 3 5l4 5 7 5a3 3 0 0 1-2 6H3a3 3 0 0 1-2-6l7-5a31 31 0 0 0 4-5 37 37 0 0 0 3-6 33 33 0 0 0 2-5l2-6a52 52 0 0 0 0-6V45l1-7a37 37 0 0 1 1-7 42 42 0 0 1 3-6 41 41 0 0 1 4-5 40 40 0 0 1 10-9 39 39 0 0 1 6-3 38 38 0 0 1 5-1c1-2 1-4 3-5l7-2 7 2 2 5zm3 7a33 33 0 0 0-6-2 3 3 0 0 1-2-2l-1-3-3-1-3 1-1 3a3 3 0 0 1-3 2 33 33 0 0 0-11 4 34 34 0 0 0-8 8 35 35 0 0 0-3 4 36 36 0 0 0-3 6 31 31 0 0 0-1 5 33 33 0 0 0-1 6v22a52 52 0 0 1-2 6v1a39 39 0 0 1-2 6 43 43 0 0 1-3 6 3 3 0 0 1-1 0l-5 6h93l-5-6a42 42 0 0 1-4-6 37 37 0 0 1-2-6 55 55 0 0 1-2-7 60 60 0 0 1 0-7v-7a3587 3587 0 0 1 0-8l-1-6a31 31 0 0 0-1-5 35 35 0 0 0-3-5 34 34 0 0 0-3-5 34 34 0 0 0-4-4 35 35 0 0 0-4-3 34 34 0 0 0-5-3z"/>
         </g>
       </svg>
+      </div>
 
       <div class="id-badge">
         <img class="avatar" src="imgs/members/member-0.jpg" alt="Profile Picture">
@@ -73,7 +74,7 @@
         <!-- Alert will get added here -->
         <div class="alert">
           <p><strong>Alert:</strong> You have unread messages</p>
-          <p>X</p>
+          <p class="closeOut">X</p>
         </div>
       </div>
 
@@ -301,34 +302,6 @@ const mobileUsers = new Chart(
 
         <!-- dynamically add this content w/ JS -->
 
-        <div class="new-member">
-          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers">
-          <h4>Victoria Chambers</h4>
-          <span class="email">victoria.chambers80@example.com</span>
-          <span class="date">12/15/21</span>
-        </div>
-
-        <div class="new-member">
-          <img class="avatar" src="imgs/members/member-2.jpg" alt="Algernon Fudginton">
-          <h4>Algernon Fudginton</h4>
-          <span class="email">yourbrotherken@example.com</span>
-          <span class="date">11/15/21</span>
-        </div>
-
-        <div class="new-member">
-          <img class="avatar" src="imgs/members/member-3.jpg" alt="Juliet Montague">
-          <h4>Juliet Montague</h4>
-          <span class="email">jules.capulet92@example.com</span>
-          <span class="date">10/15/21</span>
-        </div>
-
-        <div class="new-member">
-          <img class="avatar" src="imgs/members/member-4.jpg" alt="Sven Hasselbläd">
-          <h4>Sven Hasselbläd</h4>
-          <span class="email">77hesitancy@example.com</span>
-          <span class="date">09/15/21</span>
-        </div>
-
       </section>
 
       <section id="recent-activity">
@@ -498,4 +471,12 @@ const mobileUsers = new Chart(
     </main>
 
   </body>
+
+  <!-- Instrutions said to avoid frameworks, and to avoid PHP etc. It did not say that we couldn't use jQuery, so I'm hoping that is acceptable? Please let me know if not! -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+  <script src="js/app.js">
+
+  </script>
+
 </html>
