dynamically adding activity

--- a/index.html
+++ b/index.html
@@ -305,33 +305,9 @@ const mobileUsers = new Chart(
       </section>
 
       <section id="recent-activity">
-        <h3>Recent</h3>
+        <h3>Recent Activity</h3>
 
         <!-- dynamically add this content w/ JS -->
-
-        <div class="activity">
-          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
-          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
-          <span class="activity-message">2 hours ago</span>
-        </div>
-
-        <div class="activity">
-          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
-          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
-          <span class="activity-message">2 hours ago</span>
-        </div>
-
-        <div class="activity">
-          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
-          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
-          <span class="activity-message">2 hours ago</span>
-        </div>
-
-        <div class="activity">
-          <img class="avatar" src="imgs/members/member-1.jpg" alt="Victoria Chambers"><br>
-          <span class="activity-message">Victoria Chambers commented on <strong>WebApp's SEO Tips</strong></span><br>
-          <span class="activity-message">2 hours ago</span>
-        </div>
 
 
       </section>
