--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       </div>
     </header>
 
+    <!-- notifications drop into here -->
+    <div class="dropdown">
+      Text here won't get displayed initially!!
+    </div>
+
     <nav>
       <ul>
 
