updating checkbox flags

--- a/index.html
+++ b/index.html
@@ -333,19 +333,19 @@ const mobileUsers = new Chart(
           <!-- this class name is purely to entertain myself, and remind me what it does.
           the other option was to call it ".dont-stand-so-close-to-me"... -->
           <div class="leave-room-for-jesus">
-            <label for="email-notifications">Send Email Notifications</label>
+            <label for="emailNotifications">Send Email Notifications</label>
 
             <label class="switch">
-              <input type="checkbox" id="email-notifications" name="email-notifications" value="Send Email Notifications" checked>
+              <input type="checkbox" id="emailNotifications" name="emailNotifications" value="Send Email Notifications" checked>
               <span class="slider round"></span>
             </label><br>
           </div>
 
           <div class="leave-room-for-jesus">
-            <label for="set-profile-to-public">Set Profile to Public</label>
+            <label for="setProfileToPublic">Set Profile to Public</label>
 
             <label class="switch">
-              <input type="checkbox" id="set-profile-to-public" name="set-profile-to-public" value="Set Profile to Public" checked>
+              <input type="checkbox" id="setProfileToPublic" name="setProfileToPublic" value="Set Profile to Public" checked>
               <span class="slider round"></span>
             </label><br>
           </div>
