stored settings changing sliders on page load

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ const mobileUsers = new Chart(
             <label for="emailNotifications">Send Email Notifications</label>
 
             <label class="switch">
-              <input type="checkbox" id="emailNotifications" name="emailNotifications" value="Send Email Notifications" checked>
+              <input type="checkbox" id="emailNotifications" name="emailNotifications" value="Send Email Notifications">
               <span class="slider round"></span>
             </label><br>
           </div>
@@ -345,7 +345,7 @@ const mobileUsers = new Chart(
             <label for="setProfileToPublic">Set Profile to Public</label>
 
             <label class="switch">
-              <input type="checkbox" id="setProfileToPublic" name="setProfileToPublic" value="Set Profile to Public" checked>
+              <input type="checkbox" id="setProfileToPublic" name="setProfileToPublic" value="Set Profile to Public">
               <span class="slider round"></span>
             </label><br>
           </div>
