save button works

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ const mobileUsers = new Chart(
           </select>
 
           <div class="share-space">
-            <button type="submit" name="save">Save</button>
+            <button type="submit" name="save" id="saveButton">Save</button>
             <button type="button" name="Cancel">Cancel</button>
           </div>
 
