messing with search
added code from prev project

--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@ const mobileUsers = new Chart(
       <section id="message">
         <h3>message user</h3>
         <form class="message" action="index.html" method="post">
-          <input type="text" name="search" value="" placeholder="Search for User">
+          <input type="text" name="search" id="searchbar" value="" placeholder="Search for User">
           <textarea name="message" rows="8" cols="80" placeholder="Message for User"></textarea>
-          <button type="submit" name="Send">Send</button>
+          <button type="submit" name="Send" id="sendButton">Send</button>
         </form>
       </section>
 
