basic messaging working
logs message, clears message box

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ const mobileUsers = new Chart(
         <h3>message user</h3>
         <form class="message" action="index.html" method="post">
           <input type="text" name="search" id="searchbar" value="" placeholder="Search for User">
-          <textarea name="message" rows="8" cols="80" placeholder="Message for User"></textarea>
+          <textarea name="message" id="messagebox" rows="8" cols="80" placeholder="Message for User"></textarea>
           <button type="submit" name="Send" id="sendButton">Send</button>
         </form>
       </section>
