JS to show chart

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
           <input id="monthly" type="radio" name="traffic" value="monthly">
           <label for="monthly">Monthly</label>
-          
+
         </div>
 
         <div class="carousel-holder">
-          <div>
+          <div id="hourlyChart">
             <canvas id="myChart">
                 <!-- Fallback / screen reder content -->
                 <p>Text Here should not be displayed</p>
@@ -177,6 +177,18 @@
 
                 </script>
               </canvas>
+          </div>
+
+          <div id="dailyChart">
+            Text
+          </div>
+
+          <div id="weeklyChart">
+            Text
+          </div>
+
+          <div id="monthlyChart">
+            Text
           </div>
 
         </div>
