starting tablet sizing
including fixing dropdown notifications

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <header>
-      <h1>WebApp<sup>TM</sup></h1>
+      <h1><em>Web</em>App<sup>TM</sup></h1>
       <div class="bell">
       <svg class="navicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 117 122.9">
         <g>
